# math-tools

./: .gitignore  .readthedocs.yml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy_docs.yml
docs/: example.ipynb  index.md  linear_algebra.md  math_linear_algebra.ipynb
linear_algebra/: index.html
search/: search_index.json
src/math_tools/: __init__.py  linalg.py
tests/: pytest.ini  test_linalg.py
